--- a/pricing.html
+++ b/pricing.html
@@ -193,6 +193,83 @@
                                         </div>
                                         <hr class="mt-1 py-0 bg-dark text-muted" style="height:.003rem">
                                     </div>
+                                    <div>
+                                        <div class="d-flex justify-content-between">
+                                            <p class="h6 bold1 mb-0 text-muted">
+                                                Real-time stock updates on
+                                            </p>
+                                            <p class="mb-0">
+                                                <i class="fa fa-check font-weight-bold text-success"></i>
+                                            </p>
+                                        </div>
+                                        <hr class="mt-1 py-0 bg-dark text-muted" style="height:.003rem">
+                                    </div>
+                                    <div>
+                                        <div class="d-flex justify-content-between">
+                                            <p class="h6 bold1 mb-0 text-muted">
+                                                Real-time stock updates on
+                                            </p>
+                                            <p class="mb-0">
+                                                <i class="fa fa-check font-weight-bold text-success"></i>
+                                            </p>
+                                        </div>
+                                        <hr class="mt-1 py-0 bg-dark text-muted" style="height:.003rem">
+                                    </div>
+                                    <div>
+                                        <div class="d-flex justify-content-between">
+                                            <p class="h6 bold1 mb-0 text-muted">
+                                                Real-time stock updates on
+                                            </p>
+                                            <p class="mb-0">
+                                                <i class="fa fa-check font-weight-bold text-success"></i>
+                                            </p>
+                                        </div>
+                                        <hr class="mt-1 py-0 bg-dark text-muted" style="height:.003rem">
+                                    </div>
+                                    <div>
+                                        <div class="d-flex justify-content-between">
+                                            <p class="h6 bold1 mb-0 text-muted">
+                                                Real-time stock updates on
+                                            </p>
+                                            <p class="mb-0">
+                                                <i class="fa fa-check font-weight-bold text-success"></i>
+                                            </p>
+                                        </div>
+                                        <hr class="mt-1 py-0 bg-dark text-muted" style="height:.003rem">
+                                    </div>
+                                    <div>
+                                        <div class="d-flex justify-content-between">
+                                            <p class="h6 bold1 mb-0 text-muted">
+                                                Real-time stock updates on
+                                            </p>
+                                            <p class="mb-0">
+                                                <i class="fa fa-check font-weight-bold text-success"></i>
+                                            </p>
+                                        </div>
+                                        <hr class="mt-1 py-0 bg-dark text-muted" style="height:.003rem">
+                                    </div>
+                                    <div>
+                                        <div class="d-flex justify-content-between">
+                                            <p class="h6 bold1 mb-0 text-muted">
+                                                Real-time stock updates on
+                                            </p>
+                                            <p class="mb-0">
+                                                <i class="fa fa-check font-weight-bold text-success"></i>
+                                            </p>
+                                        </div>
+                                        <hr class="mt-1 py-0 bg-dark text-muted" style="height:.003rem">
+                                    </div>
+                                    <div>
+                                        <div class="d-flex justify-content-between">
+                                            <p class="h6 bold1 mb-0 text-muted">
+                                                Real-time stock updates on
+                                            </p>
+                                            <p class="mb-0">
+                                                <i class="fa fa-check font-weight-bold text-success"></i>
+                                            </p>
+                                        </div>
+                                        <hr class="mt-1 py-0 bg-dark text-muted" style="height:.003rem">
+                                    </div>
                                 </div>
                                 <div class="text-center  mt-auto">
                                     <a href="./free_onboarding.html">
@@ -219,7 +296,6 @@
                             </div>
                             <div class="card-body section1 px-5 py-4 pb-5 px-4 d-flex align-items- flex-column">
                                 <div class="mb-4">
-                                    <!-- <div> -->
                                     <div class="d-flex justify-content-between">
                                         <p class="h6 bold1 mb-0 text-muted">
                                             Real-time forex news
@@ -265,7 +341,52 @@
                                         </p>
                                     </div>
                                     <hr class="mt-1 py-0 bg-dark text-muted" style="height:.003rem">
-                                    <!-- </div> -->
+                                    <div class="d-flex justify-content-between">
+                                        <p class="h6 bold1 mb-0 text-muted">
+                                            Real-time forex news
+                                        </p>
+                                        <p class="mb-0">
+                                            <i class="fa fa-check font-weight-bold text-success"></i>
+                                        </p>
+                                    </div>
+                                    <hr class="mt-1 py-0 bg-dark text-muted" style="height:.003rem">
+                                    <div class="d-flex justify-content-between">
+                                        <p class="h6 bold1 mb-0 text-muted">
+                                            Real-time forex news
+                                        </p>
+                                        <p class="mb-0">
+                                            <i class="fa fa-check font-weight-bold text-success"></i>
+                                        </p>
+                                    </div>
+                                    <hr class="mt-1 py-0 bg-dark text-muted" style="height:.003rem">
+                                    <div class="d-flex justify-content-between">
+                                        <p class="h6 bold1 mb-0 text-muted">
+                                            Real-time forex news
+                                        </p>
+                                        <p class="mb-0">
+                                            <i class="fa fa-check font-weight-bold text-success"></i>
+                                        </p>
+                                    </div>
+                                    <hr class="mt-1 py-0 bg-dark text-muted" style="height:.003rem">
+                                    <div class="d-flex justify-content-between">
+                                        <p class="h6 bold1 mb-0 text-muted">
+                                            Real-time forex news
+                                        </p>
+                                        <p class="mb-0">
+                                            <i class="fa fa-check font-weight-bold text-success"></i>
+                                        </p>
+                                    </div>
+                                    <hr class="mt-1 py-0 bg-dark text-muted" style="height:.003rem">
+                                    <div class="d-flex justify-content-between">
+                                        <p class="h6 bold1 mb-0 text-muted">
+                                            Real-time forex news
+                                        </p>
+                                        <p class="mb-0">
+                                            <i class="fa fa-check font-weight-bold text-success"></i>
+                                        </p>
+                                    </div>
+                                    <hr class="mt-1 py-0 bg-dark text-muted" style="height:.003rem">
+                                    
                                 </div>
                                 <div class="text-center  mt-auto">
                                     <a href="./sign-up-premium.html" to="/registerpremium">
