--- a/premium_profile.html
+++ b/premium_profile.html
@@ -167,10 +167,10 @@
             <!-- Third -->
             <div class="container third mt-4">
                 <div class="row justify-content-center">
-                    <div class="col-md-10 p-0 card border-radius mb-4 py-md-4 ">
+                    <div class="col-md-10 p-0 card tt border-radius mb-4 py-md-4 ">
                         <div class="row justify-content-center">
-                            <div class="col-md-12">
-                                <div class="card-body">
+                            <div class="col-md">
+                                <div class="px-3">
                                     <div class="">
                                         <ul class="nav d-flex justify-content-center no- nav-pills mb-3 " id="pills-tab" role="tablist">
                                             <li class="nav-item  px-1 text-center" style="flex:1">
